@@ -1,3 +1,6 @@
+2017-03-19  Markus Gans  <guru.mail@muenster.de>
+	* Add the "mouse" example to illustrate mouse programming
+
 2017-03-17  Markus Gans  <guru.mail@muenster.de>
 	* More constant character pointers
 
